CSS: Fix special view layout issues

--- a/public/css/icinga/main.less
+++ b/public/css/icinga/main.less
@@ -16,7 +16,6 @@
 }
 
 .content-centered {
-  margin: 0 auto;
   text-align: center;
 }
 
